objects/Expenses__c.object
<CustomObject>
    <description>Custom object which records expenses incurred. Child of Contact</description>
    <fields>
        <fullName>APM__c</fullName>
        <formula>Job_placement__r.Wave_APM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APM_email__c</fullName>
        <label>APM email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>All_items_approved__c</fullName>
        <formula>IF( items__c &lt;&gt;  reviewed_items__c , &quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All items approved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_not_approved_for_payment__c</fullName>
        <formula>IF( ISBLANK(Final_approval_date__c ), 0.00, (Other_1__c +  Other_2__c +  Other_3__c +  item_4_amount__c +  Item_5_amount__c ) -  Grand_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the amount that has not been approved for payment after review.</inlineHelpText>
        <label>Amount not approved (post-review)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_status__c</fullName>
        <formula>IF(ISBLANK( Date_expenses_reviewed__c ), &quot;Pending approval&quot;, IF(ISBLANK( Final_approval_date__c ), &quot;Pending PM approval&quot;, IF(ISPICKVAL( Approve_all__c, &quot;Reject all&quot;), &quot;Rejected&quot;, &quot;Approved for payment&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approve_all__c</fullName>
        <label>Approve all?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve all</fullName>
                </value>
                <value>
                    <fullName>Reject all</fullName>
                </value>
                <value>
                    <fullName>Items individually approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Job_Application__r.Contact_Name__c</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_email__c</fullName>
        <label>Contact email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_expense_update_sent__c</fullName>
        <inlineHelpText>If there is a date in this field it means that the email has been sent to the staff member</inlineHelpText>
        <label>Date last claim summary sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_expenses_reviewed__c</fullName>
        <label>Date expenses reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_incurred_1__c</fullName>
        <label>Item 1 date incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_incurred_2__c</fullName>
        <label>Item 2 date incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_incurred_3__c</fullName>
        <label>Item 3 date incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_incurred_telephone_3__c</fullName>
        <label>Date incurred telephone 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_incurred_travel_1__c</fullName>
        <label>Date incurred travel 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_incurred_travel_2__c</fullName>
        <label>Date incurred travel 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_incurred_travel_3__c</fullName>
        <label>Date incurred travel 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_submitted__c</fullName>
        <label>Date submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_time_marked_as_paid__c</fullName>
        <inlineHelpText>Shows at what time and date this expense form was marked as paid</inlineHelpText>
        <label>Date/time marked as paid</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description_other_1__c</fullName>
        <label>Item 1 description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_other_2__c</fullName>
        <label>Item 2 description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_other_3__c</fullName>
        <label>Item 3 description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_telephone_1__c</fullName>
        <label>Item 4 description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_telephone_2__c</fullName>
        <label>Item 5 description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_travel_5__c</fullName>
        <label>Description travel 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expense_age_days__c</fullName>
        <formula>Today() - Date_submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense age (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenses_payroll_date_time__c</fullName>
        <formula>Job_placement__r.Job__r.Wave__r.RCD_end_date_time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expenses payroll date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expenses_policy__c</fullName>
        <defaultValue>&quot;https://docs.google.com/document/d/1dQMEUiZ1d25I33noSWGvqxo9odlUMCkGUH_Pr9O945E/edit#heading=h.hjn9l3naxjgt&quot;</defaultValue>
        <inlineHelpText>This guidance tells you what you can approve.</inlineHelpText>
        <label>Expenses policy</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_approval_status__c</fullName>
        <formula>IF(ISBLANK( Date_time_marked_as_paid__c ), IF(ISBLANK( Final_approval_date__c ), &quot;Submitted&quot;, IF(ISPICKVAL( Approve_all__c, &quot;Reject all&quot;), &quot;Declined&quot;, IF(ISPICKVAL( Approve_all__c, &quot;Items individually approved&quot;), &quot;Partially approved&quot;, &quot;Approved&quot;))), &quot;Payment processed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External approval status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_approval_date__c</fullName>
        <description>This field is updated automatically when expenses are approved that fall below the set caps. PMs update this field to approve expenses above the capped amounts</description>
        <label>Final approval date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <formula>IF( NOT(ISBLANK(Final_approval_date__c)), Item_1_amount_approved__c +  Item_2_amount_approved__c +  Item_3_amount_approved__c +  Item_4_amount_approved__c +  Item_5_amount_approved__c, 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the total amount of all approved items.</inlineHelpText>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incurred_during__c</fullName>
        <label>Incurred during</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Personal Challenge</fullName>
                </value>
                <value>
                    <fullName>Team Challenge</fullName>
                </value>
                <value>
                    <fullName>Real Challenge Design</fullName>
                </value>
                <value>
                    <fullName>Real Challenge Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_1__c</fullName>
        <label>Item 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_1_amount_approved__c</fullName>
        <formula>IF(AND(ISPICKVAL( Other_approved__c , &quot;Approved&quot;),  PM_approval_needed__c = False),  Other_1__c , IF(AND(ISPICKVAL( Other_approved__c , &quot;Approved&quot;),  PM_approval_needed__c = TRUE, NOT(ISNULL( Final_approval_date__c ))),  Other_1__c , 0.00))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item 1 amount approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_1_double_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows when Item 1 is below cap and does not need double approval</description>
        <label>Item 1 double approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_1_reason_declined__c</fullName>
        <inlineHelpText>Give details here of why this was declined. Please make explanation clear so that others can understand.</inlineHelpText>
        <label>Item 1 - reason declined</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_2__c</fullName>
        <label>Item 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_2_amount_approved__c</fullName>
        <formula>IF(AND(ISPICKVAL(  Telephone_approved__c  , &quot;Approved&quot;), PM_approval_needed__c = False),  Other_2__c  , IF(AND(ISPICKVAL( Telephone_approved__c, &quot;Approved&quot;), PM_approval_needed__c = TRUE, NOT(ISNULL( Final_approval_date__c ))), Other_2__c  , 0.00))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item 2 amount approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_2_double_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows when Item 2 is below cap and does not need to be approved by PM</description>
        <label>Item 2 double approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_2_reason_declined__c</fullName>
        <inlineHelpText>Give details here of why this was declined. Please make explanation clear so that others can understand.</inlineHelpText>
        <label>Item 2 - reason declined</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_3__c</fullName>
        <label>Item 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_3_amount_approved__c</fullName>
        <formula>IF(AND(ISPICKVAL( Travel_approved__c , &quot;Approved&quot;), PM_approval_needed__c = False), Other_3__c, IF(AND(ISPICKVAL( Travel_approved__c , &quot;Approved&quot;), PM_approval_needed__c = TRUE, NOT(ISNULL( Final_approval_date__c ))), Other_3__c, 0.00))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item 3 amount approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_3_double_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Item 3 double approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_3_reason_declined__c</fullName>
        <inlineHelpText>Give details here of why this was declined. Please make explanation clear so that others can understand.</inlineHelpText>
        <label>Item 3 - reason declined</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_4_approved__c</fullName>
        <label>Item 4 approved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unreviewed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_4_date_incurred__c</fullName>
        <label>Item 4 date incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_5_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Item 5 amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_5_approved__c</fullName>
        <label>Item 5 approved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unreviewed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_5_date_incurred__c</fullName>
        <label>Item 5 date incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job placement</label>
        <referenceTo>Job_placement__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NB__c</fullName>
        <formula>&quot;If there are no attached receipts in Google Docs, Notes and Attachments (above), DO NOT approve this claim. We reimburse petrol expenses at 0.45p per mile, please ensure you check mileage against total costs. Pre-approved expenses are listed on the Job Placements, if you are unsure about a pre-approved expense please discuss this with your local Staffing Team.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NB:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Insurance_number__c</fullName>
        <formula>Job_Application__r.Contact__r.National_Insurance_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Insurance number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Item 1 amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Item 2 amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Item 3 amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_approved__c</fullName>
        <label>Item 1 approved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unreviewed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_cap__c</fullName>
        <defaultValue>15.00</defaultValue>
        <inlineHelpText>This amount is set. Any approved other expenses above this amount will be flagged to the PM</inlineHelpText>
        <label>Other cap</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_subtotal__c</fullName>
        <formula>Other_1__c  +  Other_2__c  +  Other_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PM_approval_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM approval needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_email__c</fullName>
        <label>PM email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Shows that this expense form has been paid. See &quot;Date marked as paid&quot; for when this was done.</inlineHelpText>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_approved_Expenses_from_JP__c</fullName>
        <description>Pulls through Pre-Approved Expenses from Job Placement</description>
        <formula>Job_placement__r.Pre_approved_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-approved Expenses</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programmes_Notes__c</fullName>
        <inlineHelpText>Add any notes here relating to the expense claim, eg &quot;Found receipts in the expense receipt archive (programmes.expenses@the-challenge)</inlineHelpText>
        <label>Programmes Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Programmes_User_view__c</fullName>
        <formula>Job_placement__r.APM_User_View__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programmes User view</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role_from_JP__c</fullName>
        <formula>TEXT(Job_placement__r.Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPM_email__c</fullName>
        <label>SPM email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Send_discretionary_expense_claim_summary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box to resend an auto-email to the staff member to inform them of what has and has not been paid.</inlineHelpText>
        <label>Resend claim summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suggestions__c</fullName>
        <formula>&quot;Approved without receipts on exceptional circumstances.&quot; &amp; BR() &amp;
&quot;Receipts found in archive programme.expenses@the-challenge.org.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggestions:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summer_Manager_email__c</fullName>
        <label>Summer Manager email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Telephone_1__c</fullName>
        <label>Telephone 1</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telephone_2__c</fullName>
        <label>Telephone 2</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telephone_3__c</fullName>
        <label>Telephone 3</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telephone_approved__c</fullName>
        <label>Item 2 approved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unreviewed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telephone_cap__c</fullName>
        <defaultValue>15.00</defaultValue>
        <inlineHelpText>This amount is set. Any approved telephone claims above this amount will be flagged to the PM</inlineHelpText>
        <label>Telephone cap</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telephone_subtotal__c</fullName>
        <formula>Telephone_1__c  +  Telephone_2__c  +  Telephone_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telephone subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_3__c</fullName>
        <label>Travel 3</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_4__c</fullName>
        <label>Travel 4</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_5__c</fullName>
        <label>Travel 5</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_approved__c</fullName>
        <label>Item 3 approved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unreviewed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_cap__c</fullName>
        <defaultValue>15.00</defaultValue>
        <inlineHelpText>This amount is set. Approved travel expense claims over this amount will be flagged to the PM</inlineHelpText>
        <label>Travel cap</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_subtotal__c</fullName>
        <formula>item_4_amount__c  +  Item_5_amount__c  +  Travel_3__c +  Travel_4__c  +  Travel_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unreviewed_expenses_20_Days__c</fullName>
        <formula>IF(AND(
(TODAY()- Date_submitted__c)&gt;20,
 ISBLANK(Date_expenses_reviewed__c )),
TRUE,
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unreviewed expenses - 20 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <formula>Job_placement__r.Wave__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>Job_placement__r.Job__r.Wave__r.Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>item_4_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Item 4 amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>items__c</fullName>
        <formula>IF(Other_1__c &gt; 0.00, 1,0) +
IF( Other_2__c  &gt; 0.00, 1,0) +
IF( Other_3__c  &gt; 0.00, 1,0) +
IF( item_4_amount__c  &gt; 0.00, 1,0) +
IF( Item_5_amount__c  &gt; 0.00, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>reviewed_items__c</fullName>
        <formula>IF(AND(OR(ISPICKVAL(Other_approved__c, &quot;Approved&quot;),ISPICKVAL(Other_approved__c, &quot;Declined&quot;)),Other_1__c &gt; 0.00), 1,0) + 

IF(AND(OR(ISPICKVAL(Telephone_approved__c, &quot;Approved&quot;),ISPICKVAL(Telephone_approved__c, &quot;Declined&quot;)),Other_2__c &gt; 0.00), 1,0) + 

IF(AND(OR(ISPICKVAL(Travel_approved__c, &quot;Approved&quot;),ISPICKVAL(Travel_approved__c, &quot;Declined&quot;)),Other_3__c &gt; 0.00), 1,0) + 

IF(AND(OR(ISPICKVAL(Item_4_approved__c, &quot;Approved&quot;),ISPICKVAL(Item_4_approved__c, &quot;Declined&quot;)),item_4_amount__c &gt; 0.00), 1,0) + 

IF(AND(OR(ISPICKVAL(Item_5_approved__c, &quot;Approved&quot;),ISPICKVAL(Item_5_approved__c, &quot;Declined&quot;)),Item_5_amount__c &gt; 0.00), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># reviewed items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Expenses</label>
    <listViews>
        <fullName>Expense_claims_to_pay1</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>National_Insurance_number__c</columns>
        <columns>Grand_Total__c</columns>
        <columns>Paid__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Final_approval_date__c</columns>
        <columns>Date_time_marked_as_paid__c</columns>
        <columns>Job_Application__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Expenses__c.X2016</value>
        </filters>
        <filters>
            <field>Grand_Total__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Date_time_marked_as_paid__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Final_approval_date__c</field>
            <operation>lessOrEqual</operation>
            <value>7/12/2016 12:00 AM</value>
        </filters>
        <label>Expense claims to pay</label>
        <sharedTo>
            <group>Systems_and_Product</group>
            <role>Staffing_agency</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PM_approval_needed</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Wave__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Date_expenses_reviewed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Expenses__c.X2016</value>
        </filters>
        <filters>
            <field>Programmes_User_view__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Final_approval_date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>PM_approval_needed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>PM approval needed</label>
    </listViews>
    <listViews>
        <fullName>Unreviewed_expenses</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Wave__c</columns>
        <columns>APM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Expenses__c.X2016</value>
        </filters>
        <filters>
            <field>Final_approval_date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_expenses_reviewed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_submitted__c</field>
            <operation>greaterThan</operation>
            <value>5/27/2016</value>
        </filters>
        <filters>
            <field>Programmes_User_view__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>unreviewed expenses</label>
    </listViews>
    <nameField>
        <displayFormat>Exp-{00000}-{DD}/{MM}/{YY}</displayFormat>
        <label>Expenses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <recordTypes>
        <fullName>X2012</fullName>
        <active>true</active>
        <description>Expenses from 2012</description>
        <label>2012</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2013</fullName>
        <active>true</active>
        <description>2013 expenses</description>
        <label>2013</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2014</fullName>
        <active>true</active>
        <label>2014</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2015</fullName>
        <active>true</active>
        <description>2015 Expenses</description>
        <label>2015</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2016</fullName>
        <active>true</active>
        <description>2016 Expenses</description>
        <label>2016</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>All_items_declined</fullName>
        <active>true</active>
        <description>Force user to enter reason why items were declined</description>
        <errorConditionFormula>OR(AND(ISPICKVAL(  Approve_all__c , &quot;Reject all&quot;), Other_1__c &gt; 0.00,  LEN( Item_1_reason_declined__c ) &lt; 10), AND(ISPICKVAL(  Approve_all__c , &quot;Reject all&quot;),  Other_2__c  &gt; 0.00,  LEN( Item_2_reason_declined__c ) &lt; 10), AND(ISPICKVAL(  Approve_all__c , &quot;Reject all&quot;),   Other_3__c   &gt; 0.00,  LEN( Item_3_reason_declined__c ) &lt; 10), AND(ISPICKVAL(  Approve_all__c , &quot;Reject all&quot;),  item_4_amount__c   &gt; 0.00,  LEN( Item_4_reason_declined__c ) &lt; 10), AND(ISPICKVAL(  Approve_all__c , &quot;Reject all&quot;),   Item_5_amount__c   &gt; 0.00,  LEN( Item_5_reason_declined__c ) &lt; 10))</errorConditionFormula>
        <errorMessage>Please write a few words in the &quot;reason declined&quot; fields to explain why each item was declined. It will help with future queries about the claim. Thanks.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Final_approval_date_and_PM</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR($User.UserRoleId = &quot;00EC0000001TEaC&quot;, $User.UserRoleId = &quot;00E80000001T6L0&quot;, $User.UserRoleId = &quot;00E80000001Sgji&quot;), ISBLANK( Final_approval_date__c ))</errorConditionFormula>
        <errorDisplayField>Final_approval_date__c</errorDisplayField>
        <errorMessage>Please put today&apos;s date in the field &quot;Final Approval Date&quot; to confirm that these expenses should be paid.</errorMessage>
    </validationRules>
</CustomObject>